--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
       <nav>
         <ul>
           <li><a href="#our-beginning">Our Beginning</a></li>
+          <li><a href="#travels">Travels we've made</a></li>
           <li><a href="#features">Features</a></li>
           <li><a href="#testimonials">Testimonials</a></li>
         </ul>
