added travelled section with list

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,17 @@
       </p>
     </div>
 
+    <div id="travels">
+      <img src="" />
+      <h2>Destinations We've Gone To</h2>
+      <ul>
+        <li>Japan</li>
+        <li>China</li>
+        <li>Australia</li>
+        <li>France</li>
+      </ul>
+    </div>
+
     <div id="features">
       <img src="assets/images/icons/star.svg" />
       <h2>Our Features</h2>
